New Portfolio Update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="nav-bar">
                 <li><a href="#home" data-text="Início">Início</a></li>
                 <li><a href="#about" data-text="Sobre">Sobre</a></li>
-                <li><a href="#Skills" data-text="Skills">Skills</a></li>
+                <li><a href="#skills" data-text="Skills">Skills</a></li>
                 <li><a href="#service" data-text="Serviços">Serviços</a></li>
                 <li><a href="#project" data-text="Projetos">Projetos</a></li>
                 <li><a href="#contact" data-text="Contato">Contato</a></li>
@@ -42,7 +42,8 @@
 
     <!--Main Section-->
     <main>
-    
+        
+        <!--Home Section-->
         <section class="home" id="home">
             <div class="home-container">
                 <div class="home-text">
@@ -66,6 +67,7 @@
             </div>
         </section>
 
+        <!--About Section-->
         <section class="about" id="about">
             <div class="about-container">
                 <div class="about-img">
@@ -91,6 +93,71 @@
                         <a href="https://discord.com/channels/@me" target="_blank"><i class='bx bxl-discord-alt'></i></a>
                     </div>
 
+                </div>
+            </div>
+        </section>
+
+        <!--Skills Section-->
+        <section class="skills" id="skills">
+            <div class="skills-container">
+                <h2>Skills</h2>
+                <div class="skills-grid">
+                    <div class="box">
+                        <p><span>HTML5</span></p>
+                        <img src="./assets/icons/html.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>CSS3</span></p>
+                        <img src="./assets/icons/css.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>JavaScript</span></p>
+                        <img src="./assets/icons/javascript.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>TypeScript</span></p>
+                        <img src="./assets/icons/typescript.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>ReactJS</span></p>
+                        <img src="./assets/icons/react.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>NextJS</span></p>
+                        <img src="./assets/icons/next.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>SASS</span></p>
+                        <img src="./assets/icons/sass.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Tailwind CSS</span></p>
+                        <img src="./assets/icons/tailwindcss.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Storybook</span></p>
+                        <img src="./assets/icons/storybook.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Cypress</span></p>
+                        <img src="./assets/icons/cypress.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Styled-Components</span></p>
+                        <img src="./assets/icons/styled-components.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Radix</span></p>
+                        <img src="./assets/icons/radix.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Bootstrap</span></p>
+                        <img src="./assets/icons/bootstrap.svg">
+                    </div>
+                    <div class="box">
+                        <p><span>Figma</span></p>
+                        <img src="./assets/icons/figma.svg">
+                    </div>
                 </div>
             </div>
         </section>
