update new portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#home" data-text="Início">Início</a></li>
                 <li><a href="#about" data-text="Sobre">Sobre</a></li>
                 <li><a href="#skills" data-text="Skills">Skills</a></li>
-                <li><a href="#service" data-text="Serviços">Serviços</a></li>
+                <li><a href="#services" data-text="Serviços">Serviços</a></li>
                 <li><a href="#project" data-text="Projetos">Projetos</a></li>
                 <li><a href="#contact" data-text="Contato">Contato</a></li>
             </ul>
@@ -63,7 +63,7 @@
             
 
             <div class="logo-od">
-                <img src="./assets/svg/Rectangle (4).svg">
+                <img src="./assets/svg/homeIMG3.svg">
             </div>
         </section>
 
@@ -71,7 +71,7 @@
         <section class="about" id="about">
             <div class="about-container">
                 <div class="about-img">
-                    <img src="./assets/img/Group 1.png">
+                    <img src="./assets/img/about img.png">
                 </div>
                 
                 <div class="about-text">
@@ -115,44 +115,8 @@
                         <img src="./assets/icons/javascript.svg">
                     </div>
                     <div class="box">
-                        <p><span>TypeScript</span></p>
-                        <img src="./assets/icons/typescript.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>ReactJS</span></p>
-                        <img src="./assets/icons/react.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>NextJS</span></p>
-                        <img src="./assets/icons/next.svg">
-                    </div>
-                    <div class="box">
                         <p><span>SASS</span></p>
                         <img src="./assets/icons/sass.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Tailwind CSS</span></p>
-                        <img src="./assets/icons/tailwindcss.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Storybook</span></p>
-                        <img src="./assets/icons/storybook.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Cypress</span></p>
-                        <img src="./assets/icons/cypress.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Styled-Components</span></p>
-                        <img src="./assets/icons/styled-components.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Radix</span></p>
-                        <img src="./assets/icons/radix.svg">
-                    </div>
-                    <div class="box">
-                        <p><span>Bootstrap</span></p>
-                        <img src="./assets/icons/bootstrap.svg">
                     </div>
                     <div class="box">
                         <p><span>Figma</span></p>
@@ -160,6 +124,11 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!--Service Section-->
+        <section class="services" id="services">
+
         </section>
 
     </main>
