--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <li><a href="#home" data-text="Início">Início</a></li>
                 <li><a href="#about" data-text="Sobre">Sobre</a></li>
                 <li><a href="#skills" data-text="Skills">Skills</a></li>
-                <li><a href="#services" data-text="Serviços">Serviços</a></li>
+                <li><a href="#service" data-text="Serviços">Serviços</a></li>
                 <li><a href="#project" data-text="Projetos">Projetos</a></li>
-                <li><a href="#contact" data-text="Contato">Contato</a></li>
+                <li><a href="#contact" data-text="Contato">Contatos</a></li>
             </ul>
         </nav>
     </header>
@@ -80,7 +80,7 @@
                     <h3><span>Frontend Develorper e UI Designer</span></h3>
                     <p>
                         Meu nome é Lucas Eduardo, tenho 20 anos e sou Desenvolvedor Front-End.<br>
-                        Graduando em Análise e Desenvolvimento de Sistemas, atualmente estou aprimorando meus conhecimentos e habilidades no desenvolvimento Front-end e UI Designer.
+                        Graduando em Análise e Desenvolvimento de Sistemas, atualmente estou aprimorando meus conhecimentos na área de Front-end e UI Designer.
                         Estudo programação com grande dedicação e estou determinado a continuar aprimorando as minhas habilidades como um desenvolvedor web.
                         Sempre fui apaixonado por tecnologia e hoje é um prazer trabalhar na área que eu tanto amo. Atualmente sou freelancer como Front-end developer, desenvolvendo interfaces modernas concentrada em performance, animações, responsividade e SEO.
                     </p>
@@ -127,8 +127,37 @@
         </section>
 
         <!--Service Section-->
-        <section class="services" id="services">
+        <section class="service" id="service">
+            <div class="main-text">
+                <h2><span>Meus</span> Serviços</h2>
+                <h4>Melhores Websites, <span>Melhores Experiências</span></h4>
+            </div>
 
+            <div class="services-content">
+                <div class="service-box">
+                    <div class="s-icons">
+                        <span><i class='bx bx-mobile-alt'></i></span>
+                        <h3>For Mobile</h3>
+                        <p>Faço sites reponsiveis e com interações que transmitem sensação de modernidade e que chamam a atenção do usuário </p>
+                    </div>
+                </div>
+                
+                <div class="service-box">
+                    <div class="s-icons">
+                        <span><i class='bx bx-code-alt' ></i></span>
+                        <h3>Desenvolvimento</h3>
+                        <p>Desenvolvo websites profissionais como blogs, portfólios, landing pages e e-commerce.</p>
+                    </div>
+                </div>
+
+                <div class="service-box">
+                    <div class="s-icons">
+                        <span><i class='bx bx-edit-alt' ></i></span>
+                        <h3>UI Design</h3>
+                        <p>Desenho interface de forma que ela seja clara, objetiva e principalmente intuitiva para o usuário.</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
