new portfolio update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#skills" data-text="Skills">Skills</a></li>
                 <li><a href="#service" data-text="Serviços">Serviços</a></li>
                 <li><a href="#projects" data-text="Projetos">Projetos</a></li>
-                <li><a href="#contact" data-text="Contato">Contatos</a></li>
+                <li><a href="#contact" data-text="Contatos">Contatos</a></li>
             </ul>
         </nav>
     </header>
@@ -258,6 +258,7 @@
 
     <!--Script Section-->
     <script src="./assets/js/main.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 
 </body>
 </html>
