new portfolio update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="./assets/svg/LogoCODEred.svg">
+                <a href="#home"><img src="./assets/svg/LogoCODEred.svg"></a>
             </div>
         
             <div class="mobile-menu">
@@ -63,7 +63,7 @@
             
 
             <div class="logo-od">
-                <img src="./assets/svg/homeIMG3.svg">
+                <img src="./assets/svg/homeIMG4.svg">
             </div>
         </section>
 
