new portfolio update

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="s-icons">
                         <span><i class='bx bx-mobile-alt'></i></span>
                         <h3>For Mobile</h3>
-                        <p>Faço sites reponsiveis e com interações que transmitem sensação de modernidade e que chamam a atenção do usuário </p>
+                        <p>Sites com interações que transmitem sensação de modernidade e que chamam a atenção do usuário </p>
                     </div>
                 </div>
                 
