new portfolio update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     seu negócio ao mundo.</h1>
                     <p class="typed">A combinação de Design, Desenvolvimento Frontend e habilidade <br> 
                     profissional para impulsionar sua marca no mercado.</p>
-                    <p><span>"A mente que se abre a uma nova ideia, jamais voltará ao seu tamanho original"</span> - Albert Einstein.</p>
+                    <p><span>"A mente que se abre a uma nova ideia, jamais voltará ao seu tamanho original."</span></p>
                   
                     <div class="buttons">
                         <a href="./assets/pdf/Black White Corporate Finance Resume.pdf" download>Download CV</a>
@@ -79,12 +79,10 @@
                     <h2>Lucas Eduardo</h2>
                     <h3><span>Frontend Develorper e UI Designer</span></h3>
                     <p>
-                        Meu nome é Lucas Eduardo, tenho 20 anos e sou Desenvolvedor Front-End.<br>
-                        Graduando em Análise e Desenvolvimento de Sistemas, atualmente estou aprimorando meus conhecimentos na área de Front-end e UI Designer.
-                        Estudo programação com grande dedicação e estou determinado a continuar aprimorando as minhas habilidades como um desenvolvedor web.
+                        Tenho 20 anos e estou cursando Análise e Desenvolvimento de Sistemas. Estou sempre buscando aprimorar meus conhecimentos na área de Front-end e UI Designer.
                         Sempre fui apaixonado por tecnologia e hoje é um prazer trabalhar na área que eu tanto amo. Atualmente sou freelancer como Front-end developer, desenvolvendo interfaces modernas concentrada em performance, animações, responsividade e SEO.
                     </p>
-
+    
                     <div class="social-icons">
                         <a href="https://www.instagram.com/lucaseduardo_crp/" target="_blank"><i class='bx bxl-instagram'></i></a>
                         <a href="https://www.linkedin.com/in/lucaseccarvalho/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
@@ -92,7 +90,6 @@
                         <a href="https://github.com/lucaseduardocrp" target="_blank"><i class='bx bxl-github' ></i></a>
                         <a href="https://discord.com/channels/@me" target="_blank"><i class='bx bxl-discord-alt'></i></a>
                     </div>
-
                 </div>
             </div>
         </section>
