new portfolio update

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="contact-text">
                 <h2>Fale <span>Comigo!</span></h2>
                 <h4>Se você tem alguma ideia na sua mente.</h4>
-                <p>Eu sou um Desenvolvedor Web Front-End - Web Mobile - Web Designer com interfaces dinâmicas e interativas para a melhor experiência do usuário.</p>
+                <p>Eu sou um Desenvolvedor web Front-End - Web Mobile - Web Designer com interfaces dinâmicas e interativas para a melhor experiência do usuário.</p>
                 <div class="list">
                     <ul>
                         <li><a href="https://web.whatsapp.com/send?phone=5521985970787">(21) 98597-0787</a></li>
