new portfolio update

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </section>
 
         <!--Project Section-->
-        <section class="projects" id="projects" data-aos="flip-up">
+        <section class="projects" id="projects" data-aos="fade-right">
             <h2>Projetos</h2>
             <div class="project-container">
                 
@@ -201,7 +201,7 @@
         </section>
 
          <!--Contact Section-->
-         <section class="contact" id="contact" data-aos="zoom-in">
+         <section class="contact" id="contact" data-aos="fade-left">
             <div class="contact-text">
                 <h2>Fale <span>Comigo!</span></h2>
                 <h4>Se você tem alguma ideia na sua mente.</h4>
