new portifolio update

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
 
         <!--Skills Section-->
-        <section class="skills" id="skills" data-aos="fade-right">
+        <section class="skills" id="skills" data-aos="fade-up">
             <div class="skills-container">
                 <h2>Skills</h2>
                 <div class="skills-grid">
@@ -125,7 +125,7 @@
         </section>
 
         <!--Service Section-->
-        <section class="service" id="service" data-aos="fade-left">
+        <section class="service" id="service" data-aos="fade-up">
             <div class="main-text">
                 <h2><span>Meus</span> Serviços</h2>
                 <h4>Melhores Websites, <span>Melhores Experiências</span></h4>
@@ -159,7 +159,7 @@
         </section>
 
         <!--Project Section-->
-        <section class="projects" id="projects" data-aos="fade-right">
+        <section class="projects" id="projects" data-aos="fade-up">
             <h2>Projetos</h2>
             <div class="project-container">
                 
@@ -201,7 +201,7 @@
         </section>
 
          <!--Contact Section-->
-         <section class="contact" id="contact" data-aos="fade-left">
+         <section class="contact" id="contact" data-aos="fade-up">
             <div class="contact-text">
                 <h2>Fale <span>Comigo!</span></h2>
                 <h4>Se você tem alguma ideia na sua mente.</h4>
