--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
                 <a href="#home"><img src="./assets/svg/LogoCODEred.svg"></a>
             </div>
         
-            <div class="mobile-menu">
-                <i class='bx bx-menu'></i>
-            </div>
+            <div class="mobile-menu"><i class='bx bx-menu'></i></div>
 
-            <ul class="nav-bar">
+            <ul class="navbar">
                 <li><a href="#home" data-text="Início">Início</a></li>
                 <li><a href="#about" data-text="Sobre">Sobre</a></li>
                 <li><a href="#skills" data-text="Skills">Skills</a></li>
@@ -208,8 +206,8 @@
               
                 <div class="list">
                     <ul>
-                        <li><a href="https://web.whatsapp.com/send?phone=5521985970787">(21) 98597-0787</a></li>
-                        <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new">lucaseduardocrp@gmail.com</a></li>
+                        <li><a href="https://web.whatsapp.com/send?phone=5521985970787" target="_blank">(21) 98597-0787</a></li>
+                        <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new" target="_blank">lucaseduardocrp@gmail.com</a></li>
                         <li><a href="#contact">Me siga nas redes sociais</a></li>
                     </ul>
                 </div>
