--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#home"><img src="./assets/svg/LogoCODEred.svg"></a>
             </div>
         
-            <div class="mobile-menu"><i class='bx bx-menu'></i></div>
+            <div class="bx bx-menu" id="mobile-menu"></div>
 
             <ul class="navbar">
                 <li><a href="#home" data-text="Início">Início</a></li>
