--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
 
         <!--About Section-->
-        <section class="about" id="about" data-aos="flip-right">
+        <section class="about" id="about" data-aos="fade-up">
             <div class="about-container">
                 <div class="about-img">
                     <img src="./assets/img/about img.png">
