--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="about" id="about" data-aos="fade-up">
             <div class="about-container">
                 <div class="about-img">
-                    <img src="./assets/img/about img.png">
+                    <img src="./assets/img/about-img-formal.png">
                 </div>
                 
                 <div class="about-text">
