--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">  
 
-    
+    <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
     
     <title>Portfolio | Lucas Eduardo</title>
 </head>
