--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
             <div class="skills-container">
                 <h2>Skills</h2>
                 <div class="skills-grid">
-                    <div class="box">
+                    <div class="box" data-aos="flip-left">
                         <p><span>HTML5</span></p>
                         <img src="./assets/icons/html.svg">
                     </div>
-                    <div class="box">
+                    <div class="box" data-aos="flip-left">
                         <p><span>CSS3</span></p>
                         <img src="./assets/icons/css.svg">
                     </div>
-                    <div class="box">
+                    <div class="box" data-aos="flip-left">
                         <p><span>JavaScript</span></p>
                         <img src="./assets/icons/javascript.svg">
                     </div>
-                    <div class="box">
+                    <div class="box" data-aos="flip-left">
                         <p><span>SASS</span></p>
                         <img src="./assets/icons/sass.svg">
                     </div>
-                    <div class="box">
+                    <div class="box" data-aos="flip-left">
                         <p><span>Figma</span></p>
                         <img src="./assets/icons/figma.svg">
                     </div>
@@ -129,7 +129,7 @@
             </div>
 
             <div class="services-content">
-                <div class="service-box">
+                <div class="service-box" data-aos="flip-left">
                     <div class="s-icons">
                         <span><i class='bx bx-mobile-alt'></i></span>
                         <h3>For Mobile</h3>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 
-                <div class="service-box">
+                <div class="service-box" data-aos="flip-left">
                     <div class="s-icons">
                         <span><i class='bx bx-code-alt' ></i></span>
                         <h3>Desenvolvimento</h3>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="service-box">
+                <div class="service-box" data-aos="flip-left">
                     <div class="s-icons">
                         <span><i class='bx bx-edit-alt' ></i></span>
                         <h3>UI Design</h3>
