--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         <img src="./assets/icons/sass.svg">
                     </div>
                     <div class="box" data-aos="flip-left">
+                        <p><span>Git | GitHub</span></p>
+                        <img src="./assets/icons/git.svg">
+                    </div>
+                    <div class="box" data-aos="flip-left">
                         <p><span>Figma</span></p>
                         <img src="./assets/icons/figma.svg">
                     </div>
