--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@
             <div class="project-container">
                 
                 <div class="card-box">
-                    <div class="p-img"><img src="./assets/img/PortfolioAntigo.png"></div>
+                    <div class="p-img">
+                        <a href="https://lucaseduardocrp.github.io/Portfolio/">
+                            <img src="./assets/img/PortfolioAntigo.png">
+                        </a>
+                    </div>
                     <div class="details">
                         <p>Meu Portfólio Antigo</p>
                         <div class="mini-languages">
@@ -202,6 +206,23 @@
                         <div class="mini-languages">
                             <img class="mini" src="./assets/icons/html.svg">
                             <img class="mini" src="./assets/icons/css.svg">
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="card-box">
+                    <div class="p-img"> 
+                        <a href="https://glittery-dieffenbachia-30be5b.netlify.app/">
+                            <img src="./assets/img/SpaceX PROJECT.png">
+                        </a> 
+                    </div>
+                    <div class="details">
+                        <p>SpaceX Project</p>
+                        <div class="mini-languages">
+                            <img class="mini" src="./assets/icons/html.svg">
+                            <img class="mini" src="./assets/icons/css.svg">
+                            <img class="mini" src="./assets/icons/sass.svg">
+                            <img class="mini" src="./assets/icons/bootstrap.svg">
                         </div>
                     </div>
                 </div>
