--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 
                 <div class="card-box">
                     <div class="p-img">
-                        <a href="https://lucaseduardocrp.github.io/Portfolio/">
+                        <a href="https://lucaseduardocrp.github.io/Portfolio/" target="_blank">
                             <img src="./assets/img/PortfolioAntigo.png">
                         </a>
                     </div>
@@ -212,7 +212,7 @@
                 
                 <div class="card-box">
                     <div class="p-img"> 
-                        <a href="https://glittery-dieffenbachia-30be5b.netlify.app/">
+                        <a href="https://glittery-dieffenbachia-30be5b.netlify.app/" target="_blank">
                             <img src="./assets/img/SpaceX PROJECT.png">
                         </a> 
                     </div>
