--- a/index.html
+++ b/index.html
@@ -117,18 +117,22 @@
                         <img src="./assets/icons/sass.svg">
                     </div>
                     <div class="box" data-aos="fade-up" data-aos-duration="1200">
+                        <p><span>Tailwind CSS</span></p>
+                        <img src="./assets/icons/tailwindcss.svg">
+                    </div>
+                    <div class="box" data-aos="fade-down" data-aos-duration="1200">
                         <p><span>Bootstrap</span></p>
                         <img src="./assets/icons/bootstrap.svg">
                     </div>
-                    <div class="box" data-aos="fade-down" data-aos-duration="1200">
+                    <div class="box" data-aos="fade-up" data-aos-duration="1200">
                         <p><span>Bulma</span></p>
                         <img src="./assets/icons/bulma.svg">
                     </div>
-                    <div class="box" data-aos="fade-up" data-aos-duration="1200">
+                    <div class="box" data-aos="fade-down" data-aos-duration="1200">
                         <p><span>Git | GitHub</span></p>
                         <img src="./assets/icons/git.svg">
                     </div>
-                    <div class="box" data-aos="fade-down" data-aos-duration="1200">
+                    <div class="box" data-aos="fade-up" data-aos-duration="1200">
                         <p><span>Figma</span></p>
                         <img src="./assets/icons/figma.svg">
                     </div>
