--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                         <img src="./assets/icons/javascript.svg">
                     </div>
                     <div class="box" data-aos="fade-down" data-aos-duration="1200">
+                        <p><span>React JS</span></p>
+                        <img src="./assets/icons/react.svg">
+                    </div>
+                    <div class="box" data-aos="fade-up" data-aos-duration="1200">
+                        <p><span>Next JS</span></p>
+                        <img src="./assets/icons/next.svg">
+                    </div>
+                    <div class="box" data-aos="fade-down" data-aos-duration="1200">
                         <p><span>SASS</span></p>
                         <img src="./assets/icons/sass.svg">
                     </div>
@@ -229,11 +237,31 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="card-box">
+                    <div class="p-img">
+                        <a href="https://lucaseduardocrp.github.io/IMC-Calculator/" target="_blank">
+                            <img src="./assets/img/ImcCalculatorPrint.png">
+                        </a>
+                    </div>
+                    <div class="details">
+                        <p>IMC Calculator </p>
+                        <div class="mini-languages">
+                            <img class="mini" src="./assets/icons/html.svg">
+                            <img class="mini" src="./assets/icons/css.svg">
+                            <img class="mini" src="./assets/icons/javascript.svg">
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="card-box">
-                    <div class="p-img"><img src="./assets/img/Ecommerce TF.png"></div>
+                    <div class="p-img">
+                        <a href="https://lucaseduardocrp.github.io/Total-Fight-Website/#" target="_blank">
+                            <img src="./assets/img/Ecommerce TF.png">
+                        </a>
+                    </div>
                     <div class="details">
-                        <p>Ecommerce Total Fight</p>
+                        <p>Ecommerce Total Fight (Desktop)</p>
                         <div class="mini-languages">
                             <img class="mini" src="./assets/icons/html.svg">
                             <img class="mini" src="./assets/icons/css.svg">
@@ -242,9 +270,11 @@
                 </div>
                 
                 <div class="card-box">
-                    <div class="p-img"><img src="./assets/img/LP-batman.png"></div>
+                    <div class="p-img">
+                        <img src="./assets/img/LP-batman.png">
+                    </div>
                     <div class="details">
-                        <p>Landing Page The Batman</p>
+                        <p>Landing Page The Batman Movie (Desktop)</p>
                         <div class="mini-languages">
                             <img class="mini" src="./assets/icons/html.svg">
                             <img class="mini" src="./assets/icons/css.svg">
