--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <img src="./assets/icons/next.svg">
                     </div>
                     <div class="box" data-aos="fade-down" data-aos-duration="1200">
-                        <p><span>Styled-Components</span></p>
+                        <p><span>CSS-in-JS</span></p>
                         <img src="./assets/icons/styled-components.svg">
                     </div>
                     <div class="box" data-aos="fade-up" data-aos-duration="1200">
