--- a/index.html
+++ b/index.html
@@ -190,6 +190,24 @@
         <section class="projects" id="projects" data-aos="fade-down" data-aos-duration="1400">
             <h2>Projetos</h2>
             <div class="project-container">
+
+                <div class="card-box">
+                    <div class="p-img">
+                        <a href="https://githublucascode.vercel.app/" target="_blank">
+                            <img src="./assets/img/GithubClonePrint.png">
+                        </a>
+                    </div>
+                    <div class="details">
+                        <p>GitHub Clone <br> (usando API pública do GitHub)</p>
+                        <div class="mini-languages">
+                            <img class="mini" src="./assets/icons/react.svg">
+                            <img class="mini" src="./assets/icons/typescript.svg">
+                            <img class="mini" src="./assets/icons/vitejs.svg">
+                            <img class="mini" src="./assets/icons/styled-components.svg">
+                            <img class="mini" src="./assets/icons/css.svg">
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="card-box">
                     <div class="p-img">
@@ -222,22 +240,6 @@
                             <img class="mini" src="./assets/icons/css.svg">
                             <img class="mini" src="./assets/icons/sass.svg">
                             <img class="mini" src="./assets/icons/bootstrap.svg">
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="card-box">
-                    <div class="p-img">
-                        <a href="https://lucaseduardocrp.github.io/Portfolio/" target="_blank">
-                            <img src="./assets/img/PortfolioAntigo.png">
-                        </a>
-                    </div>
-                    <div class="details">
-                        <p>Meu Portfólio Antigo</p>
-                        <div class="mini-languages">
-                            <img class="mini" src="./assets/icons/html.svg">
-                            <img class="mini" src="./assets/icons/css.svg">
-                            <img class="mini" src="./assets/icons/javascript.svg">
                         </div>
                     </div>
                 </div>
