updates and fixing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="about-text">
                     <h4><span>Olá</span>, eu sou</h4>
                     <h2>Lucas Eduardo</h2>
-                    <h3><span>Frontend Develorper e UI Designer</span></h3>
+                    <h3><span>Frontend Developer e UI Designer</span></h3>
                     <p>
                         Tenho 20 anos e estou cursando Análise e Desenvolvimento de Sistemas. Estou sempre buscando aprimorar meus conhecimentos na área de Front-end e UI Designer.
                         Sempre fui apaixonado por tecnologia e hoje é um prazer trabalhar na área que eu tanto amo. Atualmente sou freelancer como Front-end developer, desenvolvendo interfaces modernas concentrada em performance, animações, responsividade e SEO.
@@ -89,7 +89,9 @@
                         <a href="https://www.instagram.com/lucaseduardo_crp/" target="_blank"><i class='bx bxl-instagram'></i></a>
                         <a href="https://www.linkedin.com/in/lucaseccarvalho/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                         <a href="https://github.com/lucaseduardocrp" target="_blank"><i class='bx bxl-github' ></i></a>
-                        <a href="https://discord.com/channels/@me" target="_blank"><i class='bx bxl-discord-alt'></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=5521985970787&text&type=phone_number&app_absent=0" target="_blank">
+                            <i class='bx bxl-whatsapp'></i>
+                        </a>
                     </div>
                 </div>
             </div>
