--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ajudando empresas, criando interfaces digitais que conectam seu negócio ao mundo.">
+    <meta name="keywords" content="Frontend, Desenvolvedor Front-end, Freelancer, UI Designer, Developer">
+    <meta name="robots" content="index,follow">
+    <meta name="author" content="Lucas Eduardo Crespo de Carvalho">
 
     <!--Styles Links-->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -20,7 +24,7 @@
 
     <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
     
-    <title>Portfolio | Lucas Eduardo</title>
+    <title>Frontend Developer | Lucas Eduardo</title>
 </head>
 <body>
     <!--Header Section-->
