--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <img src="./assets/icons/react.svg">
                     </div>
                     <div class="box" data-aos="fade-up" data-aos-duration="1200">
-                        <p><span>Next JS</span></p>
-                        <img src="./assets/icons/next.svg">
+                        <p><span>Vite JS</span></p>
+                        <img src="./assets/icons/vitejs.svg">
                     </div>
                     <div class="box" data-aos="fade-down" data-aos-duration="1200">
                         <p><span>CSS-in-JS</span></p>
